# OBS---Free-and-open-source-software-for-live-streaming-and-screen-recording

.github/workflows/: main.yml
libobs/: obs.c
plugins/: CMakeLists.txt
plugins/mac-capture/: mac-screen-capture.m
plugins/sl-ai/: CMakeLists.txt  ConnectorFrontApi.cpp  ConnectorFrontApi.h  NDKApp.cpp  NDKApp.h  sl-ai.cpp
